--- a/shopping-cart/src/main/resources/static/index.html
+++ b/shopping-cart/src/main/resources/static/index.html
@@ -5,20 +5,13 @@
     <link href="%PUBLIC_URL%/favicon.ico" rel="icon"/>
     <meta content="width=device-width,initial-scale=1" name="viewport"/>
     <meta content="#000000" name="theme-color"/>
-    <meta content="Tasker - Task management application" name="description"/>
+    <meta content="Car Inventory Management" name="description"/>
     <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon"/>
     <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
-    <title>Inventory Database</title>
-    <script defer="defer" src="/scripts/my_app_ui.js"></script>
+    <title>Car Inventory Admin</title>
+    <script defer="defer" src="my_app_ui.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <ul class="nav navbar-nav navbar-right">
-            <li><a th:href="@{/logout}">logout</a></li>
-        </ul>
-    </div>
-</nav>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 </body>
